--- a/index.html
+++ b/index.html
@@ -25,9 +25,17 @@ body{
  padding:20px;
 }
 
-.logo{text-align:center;}
-.logo img{width:140px;margin-bottom:10px;}
+/* MAIN TITLE */
+.site-title{
+ text-align:center;
+ font-size:32px;
+ font-weight:900;
+ letter-spacing:2px;
+ color:var(--light);
+ margin-bottom:10px;
+}
 
+/* CARD */
 .card{
  background:var(--card);
  padding:20px;
@@ -70,6 +78,16 @@ button:hover{background:#1d5fd1;}
 .qr{text-align:center;margin-top:15px;}
 .qr img{width:220px;}
 
+.upi-box{
+ margin-top:15px;
+ padding:12px;
+ background:#071b3d;
+ border-radius:10px;
+ text-align:center;
+ font-size:14px;
+ color:#ffdd55;
+}
+
 .message{
  margin-top:15px;
  padding:12px;
@@ -79,36 +97,7 @@ button:hover{background:#1d5fd1;}
  text-align:center;
 }
 
-/* FUNNY TOAST */
-.toast{
- position:fixed;
- bottom:20px;
- left:50%;
- transform:translateX(-50%);
- background:#000;
- padding:10px 18px;
- border-radius:20px;
- display:none;
- font-size:14px;
-}
-
-/* HELP */
-.help-grid{
- display:grid;
- grid-template-columns:1fr 1fr;
- gap:10px;
- margin-top:15px;
-}
-.help-btn{
- background:#0f2b5f;
- padding:12px;
- border-radius:10px;
- text-align:center;
- cursor:pointer;
- transition:.3s;
-}
-.help-btn:hover{background:#1f4fb0;}
-
+/* FOOTER */
 .footer{
  text-align:center;
  margin-top:25px;
@@ -122,13 +111,12 @@ button:hover{background:#1d5fd1;}
 
 <div class="container">
 
-<div class="logo">
- <img src="logo.png">
-</div>
+<!-- TOP TITLE -->
+<div class="site-title">INDRAJIT 1M</div>
 
 <!-- STEP 1 -->
 <div class="card" id="step1">
- <h2>Select Diamonds 💎</h2>
+ <h2>Login / Diamond Select</h2>
 
  <div class="package" onclick="selectPkg(this)">💎 100 Diamonds – ₹40</div>
  <div class="package" onclick="selectPkg(this)">💎 300 Diamonds – ₹110</div>
@@ -140,40 +128,35 @@ button:hover{background:#1d5fd1;}
 
 <!-- STEP 2 -->
 <div class="card hidden" id="step2">
- <h2>Player Details 🎮</h2>
+ <h2>INDRAJIT 1M – Player Details</h2>
  <input placeholder="Free Fire UID">
- <small>⚠️ UID galat hua to diamonds padosi ko chale jayenge 😂</small>
  <input placeholder="In-Game Name">
- <input type="email" placeholder="Email (order update)">
- <input placeholder="WhatsApp / Mobile (optional)">
+ <input type="email" placeholder="Email for order update">
+ <input placeholder="Mobile / WhatsApp (optional)">
  <button onclick="goPay()">Confirm Details</button>
 </div>
 
 <!-- STEP 3 -->
 <div class="card hidden" id="step3">
- <h2>Scan & Pay 💳</h2>
+ <h2>INDRAJIT 1M – Payment</h2>
+
  <div class="qr">
-  <img src="qr.png">
-  <p>QR scan karo & payment complete karo</p>
+  <img src="qr.png" alt="QR Scanner">
+  <p>Scan QR code to complete payment</p>
+ </div>
+
+ <div class="upi-box">
+  ⚠️ Agar scanner nahi dikh raha ho<br>
+  to UPI me payment kare<br><br>
+  <b>8250293087@fam</b>
  </div>
 
  <input type="file" accept="image/*">
- <button onclick="submitPay()">Submit Payment</button>
+ <button onclick="submitPay()">Submit Payment Proof</button>
 
  <div class="message hidden" id="payMsg">
   ❌ Payment abhi receive nahi hua.<br>
-  ⏳ Verify ho raha hai… chai peeke aao ☕😄
- </div>
-</div>
-
-<!-- HELP -->
-<div class="card">
- <h2>Help & Support 🤝</h2>
- <div class="help-grid">
-  <div class="help-btn">❓ How to Buy</div>
-  <div class="help-btn">💳 Payment Issue</div>
-  <div class="help-btn">🧾 Order Status</div>
-  <div class="help-btn" onclick="funnyHelp()">🤖 AI Help</div>
+  Please support se contact kare.
  </div>
 </div>
 
@@ -184,27 +167,17 @@ button:hover{background:#1d5fd1;}
 
 </div>
 
-<div class="toast" id="toast"></div>
-
 <script>
 let selected=false;
-
-function showToast(msg){
- let t=document.getElementById("toast");
- t.innerHTML=msg;
- t.style.display="block";
- setTimeout(()=>t.style.display="none",2500);
-}
 
 function selectPkg(el){
  document.querySelectorAll('.package').forEach(p=>p.classList.remove('active'));
  el.classList.add('active');
  selected=true;
- showToast("💎 Diamonds aa rahe hain… patience rakho 😜");
 }
 
 function goUID(){
- if(!selected){alert("Pehle diamonds select karo 😅");return;}
+ if(!selected){alert("Pehle diamonds select karo");return;}
  step1.classList.add("hidden");
  step2.classList.remove("hidden");
 }
@@ -212,16 +185,10 @@ function goUID(){
 function goPay(){
  step2.classList.add("hidden");
  step3.classList.remove("hidden");
- showToast("Almost done! Last step baki hai 🚀");
 }
 
 function submitPay(){
  document.getElementById("payMsg").classList.remove("hidden");
- showToast("Payment submit ho gaya 👍");
-}
-
-function funnyHelp(){
- alert("🤖 AI: Main help ke liye hoon 😄\nAgar serious issue hai to Telegram helpline use karo!");
 }
 </script>
 
